example/secondfile/objects/RDS_BillingRelatedElements__c.object
<CustomObject>
    <description>For Capturing Billing related Elements for a Premis</description>
    <fields>
        <fullName>Billing_Premise_Number__c</fullName>
        <description>Technical field, not required on page layouts.</description>
        <formula>PremiseDetails__r.Premise_Number__c</formula>
        <label>Billing Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Charge_Element_ID__c</fullName>
        <label>Change Charge Element ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeType__c</fullName>
        <label>ChargeType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Element_ID__c</fullName>
        <description>RDS-Premise Details - BillingRelatedElements-Charge Element ID</description>
        <label>Charge Element ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>RDS-Premise Details-BillingRelatedElements-CurrencyCode</description>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Specified_Rate_Code__c</fullName>
        <description>RDS-Premise Details-BillingRelatedElements-customerSpecifiedRateCode</description>
        <label>Customer Specified Rate Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptyID__c</fullName>
        <formula>CASESAFEID(PremiseDetails__r.DealHash__r.Opportunity__c)</formula>
        <label>OptyID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Rate_Amount__c</fullName>
        <description>RDS-Premise Details-BillingRelatedElements-overrideRateAmount</description>
        <label>Override Rate Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PremiseDetails__c</fullName>
        <description>To Related Master(Premise) with Child(BillingElementDetails)</description>
        <label>RDS-Premise Details</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipName>RDS_BillingRelatedElements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>RDS-Premise Details-BillingRelatedElements-quantity</description>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Service_ID__c</fullName>
        <description>RDS-Premise Details-BillingRelatedElements-uniqueServiceId</description>
        <label>Unique Service ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-Billing Related Elements</label>
    <nameField>
        <displayFormat>BRE-{000000}</displayFormat>
        <label>BillingRelatedElements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-BillingRelatedElements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lookup_to_Premise_cannot_be_updated</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( PremiseDetails__c )</errorConditionFormula>
        <errorMessage>The reference to Premise Details cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_RDS_Update_if_Edit_period_has_ex</fullName>
        <active>true</active>
        <description>Prevent RDS Update if edit period has expired</description>
        <errorConditionFormula>AND(OR(if(PremiseDetails__r.DealHash__r.Edit_Expired_Date__c&lt;Now(),true,false),ISPICKVAL( PremiseDetails__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),
$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;,
$Profile.Name &lt;&gt; &quot;ATT Partner Community User&quot;, 
$Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . PLease contact  EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_BillR</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;,  MACD_Type__c&lt;&gt;null,
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-Billing Related Elements record.</errorMessage>
    </validationRules>
</CustomObject>